--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "sirv-cli": "^3.0.1"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
     "frappe-gantt": "^1.0.3",
     "maplibre-gl": "^5.6.2",
