--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "daocheng-travel-frontend",
-  "version": "1.0.0",
-  "description": "稻城亚丁智能旅游规划系统前端",
+  "name": "daocheng-travel-planner",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
-    "dev": "rollup -c -w",
-    "build": "rollup -c",
-    "serve": "sirv dist --port 3001 --cors"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-terser": "^0.4.4",
-    "rollup": "^4.46.2",
-    "rollup-plugin-css-only": "^4.5.2",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^3.0.0",
-    "sirv-cli": "^3.0.1"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "chart.js": "^4.5.0",
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.0",
+    "pinia": "^2.1.0",
+    "axios": "^1.6.0",
     "dayjs": "^1.11.13",
-    "frappe-gantt": "^1.0.3",
     "maplibre-gl": "^5.6.2",
-    "sortablejs": "^1.15.6"
+    "frappe-gantt": "^1.0.3",
+    "sortablejs": "^1.15.6",
+    "chart.js": "^4.5.0",
+    "@vueuse/core": "^10.7.0",
+    "element-plus": "^2.4.0",
+    "@element-plus/icons-vue": "^2.3.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.0",
+    "vite": "^5.0.0",
+    "typescript": "^5.3.0",
+    "vue-tsc": "^1.8.0",
+    "@types/node": "^20.10.0",
+    "unplugin-auto-import": "^0.17.0",
+    "unplugin-vue-components": "^0.26.0",
+    "sass": "^1.69.0",
+    "@types/sortablejs": "^1.15.8"
   }
 }
