--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,28 +9,28 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.0",
-    "pinia": "^2.1.0",
-    "axios": "^1.6.0",
-    "dayjs": "^1.11.13",
-    "maplibre-gl": "^5.6.2",
-    "frappe-gantt": "^1.0.3",
-    "sortablejs": "^1.15.6",
-    "chart.js": "^4.5.0",
+    "@element-plus/icons-vue": "^2.3.0",
+    "@infectoone/vue-ganttastic": "^2.3.2",
     "@vueuse/core": "^10.7.0",
+    "axios": "^1.6.0",
+    "chart.js": "^4.5.0",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.4.0",
-    "@element-plus/icons-vue": "^2.3.0"
+    "maplibre-gl": "^5.6.2",
+    "pinia": "^2.1.0",
+    "sortablejs": "^1.15.6",
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.0.0",
-    "typescript": "^5.3.0",
-    "vue-tsc": "^1.8.0",
     "@types/node": "^20.10.0",
+    "@types/sortablejs": "^1.15.8",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "sass": "^1.69.0",
+    "typescript": "^5.3.0",
     "unplugin-auto-import": "^0.17.0",
     "unplugin-vue-components": "^0.26.0",
-    "sass": "^1.69.0",
-    "@types/sortablejs": "^1.15.8"
+    "vite": "^5.0.0",
+    "vue-tsc": "^1.8.0"
   }
 }
